<resources>
    <string name="app_name">Tajwid Plus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idgham_description1">Menurut bahasa, idgham berarti ‘memasukkan sesuatu pada sesuatu’. Maksudnya adalah dengan memasukkan huruf nun mati  (نْ) pada idgham. Sementara menurut istilah, idgham dapat berarti ‘pertemuan huruf mati dengan huruf hidup sehingga kedua huruf tersebut menjadi satu huruf yang ditasydid.</string>
    <string name="idgham_description2">Nah kesimpulannya, bacaan idgham ini berupa memasukkan  (نْ) atau tanwin (ـًـــٍـــٌ) pada huruf-huruf idgham dan seakan-akan kedua huruf tersebut menjadi satu.</string>
    <string name="idgham_description3">Pada idgham ini, pembagian hurufnya bergantung pada jenis-jenis idgham itu sendiri, yang berjumlah 6 huruf. Sehingga jika terdapat nun mati  (نْ) atau tanwin (ـًـــٍـــٌ) bertemu dengan salah satu keenam huruf tersebut, maka nun mati  (نْ) atau tanwin (ـًـــٍـــٌ) harus dimasukkan padanya. Keenam huruf itu ada yang dibaca dengan cara mendengung, ada pula yang tidak.</string>

    <string name="bigunnah1">Secara bahasa, idgham artinya idkhal atau memasukkan, sedangkan secara istilah adalah menyamarkan atau meleburkan nun mati atau tanwin dengan huruf-huruf idgham sehingga seolah-olah menjadi satu huruf yang bertasydid.</string>
    <string name="bigunnah2">Adapun, idgham bigunnah yaitu jika nun mati atau tanwin bertemu dengan huruf ya (ي), nun (ن), mim (م), dan wau (و), maka harus dibaca idgham disertai dengan dengung di hidung (gunnah).</string>
    <string name="bigunnah3">Contoh bacaan idgham bighunnah:</string>
    <string name="bigunnah4">أَبِى لَهَبٍ وَتَبَّ</string>
    <string name="bigunnah5">Arab latin: Abī lahabiw wa tabb (QS Al Lahab: 1)</string>

    <string name="bilagunnah1">Idgham bilaghunnah yaitu jika nun mati atau tanwin bertemu dengan lam (ل) dan ra (ر), maka harus dibaca idgham tanpa disertai dengung di hidung (gunnah).</string>
    <string name="bilagunnah2">Contoh bacaan idgham bilaghunnah:</string>
    <string name="bilagunnah3">وَلَمْ يَكُنْ لَهُ</string>
    <string name="bilagunnah4">Arab latin: Wa lam yakul lahụ (QS Al Ikhlas: 4)</string>


</resources>