<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".materi.IdghamListActivity"
    android:background="@color/bg_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pengertian Idghom"
            android:textColor="@color/bd_text"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="@font/playfairdisplay_black"/>

        <TextView
            style="@style/MyTextViewStyle"
            android:text="@string/idgham_description1" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            style="@style/MyTextViewStyle"
            android:text="@string/idgham_description2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            style="@style/MyTextViewStyle"
            android:text="@string/idgham_description3" />

<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="2"-->
<!--            android:rowCount="5"-->
<!--            android:layout_gravity="center"-->
<!--            android:padding="5dp">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardIdhar"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="0"-->
<!--                android:layout_column="0"-->
<!--                android:layout_rowWeight="1"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:gravity="center"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@color/bg_cardview"-->
<!--                    android:orientation="vertical">-->

<!--                    <ImageView-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp" />-->


<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardIdghom"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="0"-->
<!--                android:layout_column="1"-->
<!--                android:layout_rowWeight="1"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="vertical"-->
<!--                    android:background="@color/bg_cardview">-->

<!--                    <ImageView-->
<!--                        android:layout_width="130dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp" />-->


<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardIkhfa"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="1"-->
<!--                android:layout_column="0"-->
<!--                android:layout_rowWeight="1"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center"-->
<!--                    android:background="@color/bg_cardview"-->
<!--                    >-->

<!--                    <ImageView-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp" />-->


<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardIqlab"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="1"-->
<!--                android:layout_column="1"-->
<!--                android:layout_rowWeight="1"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center"-->
<!--                    android:background="@color/bg_cardview">-->

<!--                    <ImageView-->
<!--                        android:layout_width="110dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp"-->
<!--                        android:paddingTop="10dp"/>-->


<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardLain"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="3"-->
<!--                android:layout_column="0"-->
<!--                android:layout_rowWeight="2"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center"-->
<!--                    android:background="@color/bg_cardview">-->

<!--                    <ImageView-->
<!--                        android:id="@+id/image5"-->
<!--                        android:layout_width="130dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp"-->
<!--                        android:paddingTop="10dp"/>-->

<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_row="3"-->
<!--                android:layout_column="1"-->
<!--                android:layout_rowWeight="2"-->
<!--                android:layout_columnWeight="1"-->
<!--                card_view:cardCornerRadius="8dp"-->
<!--                card_view:cardElevation="4dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:padding="16dp"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center"-->
<!--                    android:background="@color/bg_cardview">-->

<!--                    <ImageView-->
<!--                        android:layout_width="130dp"-->
<!--                        android:layout_height="100dp"-->
<!--                        android:src="@drawable/ic_launcher_foreground"-->
<!--                        android:layout_marginBottom="8dp"-->
<!--                        android:paddingTop="10dp"/>-->

<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

<!--        </GridLayout>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIdgghom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Idgham Description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idgham_description1"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/arrow_down_float" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>